Make CSRF tokens session based
- Generate CSRF token during login and use the same token for the full session
- Update dependencies

--- a/Pipfile
+++ b/Pipfile
@@ -7,20 +7,20 @@ name = "pypi"
 python_version = "3.10"
 
 [packages]
-arrow = "~=1.2.2"
-pony = "~=0.7.16"
-click = "~=8.1.0"
-Flask = "~=2.1.0"
-gunicorn = "~=20.1.0"
-gevent = "~=21.12.0"
-argon2-cffi = "~=21.3.0"
-redis = "~=4.3.1"
-sendgrid = "~=6.9.7"
+arrow = "*"
+pony = "*"
+click = "*"
+Flask = "*"
+gunicorn = "*"
+gevent = "*"
+argon2-cffi = "*"
+redis = "*"
+sendgrid = "*"
 
 [dev-packages]
-pytest = "~=7.1.1"
-black = "~=22.3.0"
-flake8 = "~=4.0.1"
-devtools = {extras = ["pygments"], version = "~=0.8.0"}
-pony-stubs = "~=0.5.2"
-djlint = "==1.17.3"
+pytest = "*"
+black = "*"
+flake8 = "*"
+devtools = {extras = ["pygments"], version = "*"}
+pony-stubs = "*"
+djlint = "*"
